WEX Salesforce project/force-app/main/default/objects/Project_Milestone__c/Project_Milestone__c.object-meta.xml
<CustomObject>
    <description>Project milestones, composed of to-do activities.</description>
    <label>Project Milestone</label>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>