WEX Salesforce project/force-app/main/default/objects/Project_Milestone__c/fields/Percentage_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Completion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percentage of Completion</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>